# ReXOR

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build-release.yml  ci.yml
src/: lib.rs  main.rs
